# starship

./: .gitignore  README.md  docker-compose.built.yaml  docker-compose.yaml  update.py  update.sh
aks/: api.yaml  (+2 more)
api/: .coveragerc  .dockerignore  .flake8  Dockerfile  entrypoint.sh  install-poetry.py  pyproject.toml  readme.md
api/chat/: consumers.py  events.py  helpers.py  messages.py  middleware.py  routing.py
api/config/: asgi.py  settings.py  spectacular_settings.py  urls.py  wsgi.py
api/courses/: admin.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  viewsets.py
api/courses/migrations/: 0001_initial.py  0002_tag_course_tags.py  0003_scorechange.py  0004_course_completed_course_price_coursereview.py  0005_course_agenda_course_image.py  0006_course_is_accepted.py  0007_alter_enrollment_options.py  0008_course_level.py  0009_course_link.py
api/docs/: conf.py  users.rst  users.serializers.rst
api/fixtures/: companies.json  courses.json  jobposts.json  projects.json  users.json
api/job_posts/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  viewsets.py
api/job_posts/migrations/: 0001_initial.py  0002_remove_jobpost_salary_range_jobpost_salary_high_and_more.py  0003_rename_user_company_owner_alter_jobpost_salary_high_and_more.py  (+1 more)
api/portfolios/: admin.py  models.py  serializers.py  urls.py  viewsets.py
api/users/: admin.py  exceptions.py  models.py  permissions.py  urls.py  utils.py  views.py  viewsets.py
api/utils/: message_response.py
api/webrtc/: connections.py  consumers.py  routing.py
(+212 files in other folders)
